# voiStarcraft2

./: .gitattributes  .ouroboros_eval_artifact.md  LICENSE  README.md  pyproject.toml
.ouroboros/: mechanical.toml
docs/: architecture.md  claude-handoff.md  contracts.md  intent-inventory.md  issue-10-policy-tree-collaboration.md  llm-combo-controller-plan.md  micromachine-adoption.md  micromachine-build-evidence-pr110.md  micromachine-command-system-roadmap.md  micromachine-pre-live-qa-hardening.md  micromachine-production-ops.md  micromachine-rich-dsl-examples.md  micromachine-thunderbird-blocker.md  roadmap-llm-gui.md  sc2-collaboration-policy-tree.md  sc2-smoke-test.md  suvorov-backend-evaluation.md
starcraft_commander/: __init__.py  contracts.py  demo_sc2.py  feasibility.py  live_pipeline.py  llm_interpreter.py  map_resolver.py  micromachine_bridge.py  micromachine_build_identity.py  micromachine_chat_modulation.py  micromachine_command_execution.py  micromachine_live_session.py  micromachine_map_pool.py  micromachine_preflight.py  micromachine_release_gate.py  micromachine_runtime.py  micromachine_soak.py  micromachine_soak_history.py  micromachine_tactical_evidence.py  micromachine_triage.py  narrator.py  neural_representation.py  policy_modulation.py  policy_modulation_provider.py  policy_observability.py  policy_tree.py  python_sc2_adapter.py  runtime_deps.py  sc2_executor.py  state_resolver.py  voice_input.py  web_gui.py
tests/: test_architecture_docs.py  test_demo.py  test_demo_sc2.py  test_executor.py  test_feasibility.py  test_intents.py  test_map.py  (+38 more)
(+83 files in other folders)
