[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "voiStarcraft2"
version = "0.1.0"
description = "voiStarcraft2: a natural-language and voice StarCraft II commander."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"
license-files = ["LICENSE", "LICENSES/AGPL-3.0-or-later.txt"]
keywords = ["starcraft", "sc2", "natural-language", "voice", "commander"]
# The core commander pipeline is pure stdlib; every runtime integration is optional.
dependencies = []

[project.optional-dependencies]
# burnysc2 is the maintained python-sc2 fork; it provides the importable 'sc2' package.
# StarCraft II itself plus maps must also be installed locally (see docs/sc2-smoke-test.md).
sc2 = ["burnysc2>=6.5"]
voice = ["faster-whisper>=1.0", "sounddevice>=0.4.6"]
# LLM interpretation for free-form Korean commands. Keys may be supplied via
# local env vars or the localhost web GUI; they are never required in repo files.
llm = ["anthropic>=0.40", "openai>=1.0"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
# Only ship the product packages; tests/ and docs/ stay out of the distribution.
include = ["toycraft_commander*", "starcraft_commander*", "broodwar_commander*"]
